--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ body {
   margin: 0px;
 }
 
+#mobileImg {
+  display: none;
+}
+
 .mainContainer {
   display: flex;
   flex-direction: row;
@@ -85,4 +89,38 @@ body {
   background-image: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
   display: inline-block;
   border-radius: 30px;
+}
+
+@media screen and (max-width: 1530px) {
+  .mainContainer {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .leftSide {
+    position: relative;
+    top: 700px;
+  }
+
+  .leftSide img {
+    position: relative;
+    bottom: 660px;
+    right: 80px;
+  }
+
+  .rightSide {
+    position: relative;
+    bottom: 600px;
+  }
+
+  .rightSide img {
+    display: none;
+  }
+
+  #mobileImg {
+    display: block;
+    height: 400px;
+    width: 410px;
+    position: relative;
+  }
 }
